--- a/Labirinth/Labirinth.csproj
+++ b/Labirinth/Labirinth.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
+    <Compile Include="Move.cs" />
     <Compile Include="Wanderer.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
